Fixed buggy css spacing

--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -12,11 +12,7 @@
   }
 
   .jumbotron {
-    padding-top: 10px;
-  }
-
-  .jumbo-left h1 {
-    margin-top: 100px;
+    padding-top: 50px;
   }
 
   .jumbo-left {
